--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.5",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "graphql": "^16.8.2",
     "gsap": "^3.12.5",
+    "interweave": "^13.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
